# Coord2Region

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.rst  SECURITY.md  all_codes.py  codecov.yml  combined_python_code.txt  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.ipynb  yorguin.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  joss-paper.yml  lint.yml  python-tests.yml  release.yml  web-interface-ci.yml  web-interface-pages.yml  website.yml
coord2region/: __init__.py  ai_helpers.py  ai_model_interface.py  ai_reports.py  brain_insights.py  cli.py  combined_python_code.txt  config.py  coord2region.py  coord2study.py  fetching.py  fetching_v2.py  file_handler.py  image_utils.py  llm.py  llm_service.py  pipeline.py  prompt_utils.py  summary_generator.py  summary_generator_v2.py  test_MRI_plot.py  test_api_deep_seek.py  test_api_gemini.py  test_api_hf.py  test_coord2region.py
coord2region/mne_atlas/: mne_fetching.py  mne_mapper.py
coord2region/utils/: __init__.py  file_handler.py  image_utils.py  paths.py  utils.py
docs/source/: README.md  README.rst  api_reference.rst  atlases.rst  changelog.rst  conf.py  developer_guide.md  developer_guide.rst  documentation.rst  documentation_overview.rst  get_help.rst  index.rst  install.rst  pipeline.rst  providers.md  sg_execution_times.rst  support_development.rst
docs/source/_static/css/: custom.css
docs/source/_templates/autoapi/python/: data.rst
docs/source/dev/: dev_python.rst  dev_web.rst  roadmap.rst
docs/source/documentation/: atlases.rst  citation.rst  cli_tools.rst  coc.rst  contributors.rst  design_philosophy.rst  glossary.rst  pipeline.rst  providers.rst  tutorials.rst  web_interface.rst  workflow.rst
docs/source/install/: verification.rst
docs/static/: schema.json
examples/: README.rst  ai_image_workflow.py  ai_reasoned_report.py  ai_text_summary.py  custom_provider_example.py  example_0_simple_atlas.py  example_10_image_providers.py  example_11_local_huggingface.py  example_12_nilearn_backend.py  example_14_batch_aparc.py  example_1_harvard-oxford.py  example_2_batch_harvard.py  example_3_multi.py  example_4_study.py  example_5_multi_atlas_coords_and_studies_querying.py  example_6_dataset_cache.py  example_7_ai_providers.py  example_8_conditional_provider_activation.py  example_9_output_formats.py  example_batch_harvard.py  example_harvard-oxford.py  example_harvard.py  example_multi.py  example_pipeline.py  example_simple_atlas.py  example_study.py  plot_ai_interface.py  plot_coord2study.py  plot_fetching.py  plot_fmri_coord_to_region.py  plot_ieeg_electrode_localization.py  plot_meg_source_localization.py
paper/: diagram.csv  paper.bib  paper.md
paper/jats/: paper.jats
scripts/: configure_coord2region.py  generate_schema.py
sourcelocalizer/: __init__.py  load_atlas_data.py
sourcelocalizer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sourcelocalizer/utils/: __init__.py  utils.py
tests/: __init__.py  debug_fetching.ipynb  pytest.ini  test_ai_model_interface.py  test_brain_insights.py  test_cli.py  test_cli_utils.py  test_config.py  test_coord2region.py  test_coord2region_general.py  test_coord2region_harvard.py  test_coord2region_yeo.py  test_coord2study.py  test_fetch.py  test_fetching.py  test_file_handler.py  test_image_utils.py  test_llm.py  test_llm_service.py  test_pipeline.py  test_prompt_utils.py  test_schema.py
web-interface/: README.md  _config.yml  about.md  builder.md  cloud.md  index.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web-interface/_includes/: head.html
web-interface/_layouts/: default.html
web-interface/_site/: README.md  index.html  package.json
web-interface/_site/about/: index.html
web-interface/_site/assets/css/: main  main.css  styles.css
web-interface/_site/assets/js/: bundle.js  bundle.js.map
web-interface/_site/builder/: index.html
web-interface/_site/cloud/: index.html
web-interface/_site/scripts/: generate-preview.mjs
web-interface/_site/test-preview/: index.html
web-interface/assets/css/: main  main.css  styles.css
web-interface/tests/ui/: config_builder.spec.ts
web-interface/website/src/: ConfigBuilder.tsx  configBuilder.css  main.tsx
