[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "coord2region"
dynamic = ["version"]  # Automatically fetch version from Git tags
authors = [
  { name = "Hamza Abdelhedi", email = "hamza.abdelhedii@gmail.com" }
]
description = "Find region name for a given MNI coordinate in a selected atlas"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
license = { text = "MIT" }

dependencies = [
    "biopython",
    "mne",
    "nibabel",
    "nilearn>=0.11",
    "nimare>=0.4.0",
    "numpy",
    "pandas",
    "scipy",
    "requests",
    "pyyaml",
    "openpyxl",
    "Pillow",
    "fpdf",
    "anthropic",
    "diffusers",
    "google-genai",
    "openai",
    "transformers",
]

[project.urls]
Homepage = "https://github.com/pypa/Coord2Region"
Issues = "https://github.com/pypa/Coord2Region/issues"

[project.scripts]
coord2region = "coord2region.cli:main"

[tool.setuptools_scm]
write_to = "Coord2Region/_version.py"

[tool.ruff]
line-length = 88
target-version = "py39"
exclude = ["docs", "examples", "tests"]

[tool.ruff.lint]
select = ["E", "F", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
