[build-system]
requires = ["setuptools>=61.0", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "coord2region"
dynamic = ["version"]  # Automatically fetch version from Git tags
authors = [
  { name = "Hamza Abdelhedi", email = "hamza.abdelhedii@gmail.com" }
]
description = "Find region name for a given MNI coordinate in a selected atlas"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent"
]
license = "BSD-3-Clause"

dependencies = [
    "biopython", # Recommended: update to 1.87+ when released (CVE-2025-68463)
    "filelock>=3.20.3", # Fix TOCTOU Symlink Vulnerability (CVE-2024-56334)
    "fonttools>=4.60.2", # Fix Arbitrary File Write and XML injection (CVE-2024-52233)
    "pyasn1>=0.6.2", # Fix security vulnerability
    "Pillow>=12.1.1", # Fix out-of-bounds write
    "urllib3>=2.6.3", # Fix decompression-bomb bypass
    "mne",
    "nibabel",
    "nilearn==0.12.0",
    "nimare==0.4.0", # pinned to match nilearn 0.12.0
    "numpy",
    "pandas",
    "pydantic>=2.6.0",
    "scipy",
    "requests",
    "pyyaml",
    "openpyxl",
    "Pillow",
    "fpdf",
    "anthropic",
    "diffusers",
    "google-genai",
    "openai>=1.0.0",
    "transformers",
    "pooch>=1.5",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest-cov",
    "ruff",
    "torch>=2.0.0",
]
docs = [
    "insegel",
    "myst-parser",
    "pydata-sphinx-theme",
    "packaging",
    "sphinx>=4.0.0",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "sphinx-gallery",
    "sphinxcontrib-mermaid",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest-cov",
    "ruff",
    "torch>=2.0.0",
]
docs = [
    "insegel",
    "myst-parser",
    "pydata-sphinx-theme",
    "packaging",
    "sphinx>=4.0.0",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "sphinx-gallery",
    "sphinxcontrib-mermaid",
]
tests = [
    "pytest-cov",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/BabaSanfour/Coord2Region"
Issues = "https://github.com/BabaSanfour/Coord2Region/issues"

[project.scripts]
coord2region = "coord2region.cli:main"

[tool.setuptools_scm]
write_to = "coord2region/_version.py"

[tool.setuptools.packages.find]
include = ["coord2region", "coord2region.*"]
exclude = ["paper*", "docs*", "examples*", "tests*"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["docs", "examples", "tests"]

[tool.ruff.lint]
select = ["E", "F", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
